# mcp_obsidian_notes

./: .gitignore  Cargo.toml  README.md  SKILL.md  test_server.py  test_shell_server.py
src/: cli.rs  cli_utils.rs  config.rs  main.rs  service.rs  template_processor.rs
